# finance-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  liabilities.csv  main.py  plan.md  pyproject.toml
.claude/: CLAUDE.md  gsd-file-manifest.json  settings.json
.claude/hooks/: lint-python.sh
.claude/prompts/: prompts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  (+4 more)
.streamlit/: config.toml
api/: dependencies.py  main.py
app/: config.py  database.py  models.py  seed.py
client/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/: main.py
mockups/: mockup_goals.html  mockup_history.html  mockup_themes.html
scripts/: import_liabilities_csv.py  migrate_accounts_entry_date.py  migrate_accounts_to_entries.py  migrate_liabilities.py  migrate_test_user.py
terraform/: .gitignore  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
tests/: conftest.py  test_account_service.py  test_api_accounts.py  test_api_auth.py  test_api_configure.py  test_api_dashboard.py  test_api_health.py  test_api_liabilities.py  test_api_main_wiring.py  test_api_pension.py  test_api_snapshots.py  test_dashboard_helpers.py  test_liability_service.py  test_snapshot_service.py  test_type_service.py
(+156 files in other folders)
