[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal net worth tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "sqlmodel",
    "psycopg2-binary",
    "firebase-admin",
    "pandas",
    "plotly",
    "loguru",
    "pydantic-settings",
    "streamlit-option-menu>=0.4.0",
    "fastapi[standard]>=0.136.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "time-machine>=3.2.0",
]
